fix: update quote and author text color for better visibility

--- a/src/components/quote/quote.module.css
+++ b/src/components/quote/quote.module.css
@@ -9,14 +9,14 @@
 }
 
 .quote {
-  color: var(--color-white);
+  color: rgba(0, 0, 0, 8.85);
   font-size: 0.75rem;
   line-height: 1.375rem;
   margin-bottom: 0.5rem;
 }
 
 .author {
-  color: var(--color-white);
+  color: rgba(0, 0, 0, 8.85);
   font-size: 0.75rem;
   font-weight: bold;
   line-height: 1.375rem;
